# rollout-operator

./: Dockerfile  README.md  build-and-deploy.sh  operator.yml  pyproject.toml  requirements.txt  rollout_operator.py
demo/: Dockerfile  app.py  sts.yml
scripts/: build-images.sh  rollout_tui.py  run-tests.sh  test-rollout.sh  update-operator-code.sh
tests/: conftest.py
tests/integration/: conftest.py  test_rollout.py
tests/unit/: test_helpers.py
